"Front_end con listas process"

--- a/Servidor/src/main/resources/static/index.html
+++ b/Servidor/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Cliente\style.css">
+    <link rel="stylesheet" href="estilos\style.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,36 +14,33 @@
         <label for="Apellido">Apellido:</label><input id="Apellido" type="text">
         <label for="Nombre">Edad:</label><input id="edad" type="text">
     </form>
+    
     <button onclick="postData()">Publicar</button>
+    <div id="contenedor">
+        <div><header>Lista de empleados</header></div>
+        <div id="title">
+            <div class="title">Nombre</div>
+            <div class="title">Apellido</div>
+            <div class="title">Edad</div>
+        </div>
+        <div id="listas">
+            <div class="listas">
+                <ul id="nombres">
+                    <li>Mati</li>
+                </ul>
+            </div>
+            <div class="listas">
+                <ul id="apellidos">
+                    <li>Anovazzi</li>
+                </ul>
+            </div>
+            <div class="listas">
+                <ul id="edades">
+                    <li>14</li>
+                </ul>
+            </div>
+        </div>    
+    </div>
 </body>
-<script>
-
-
-    function postData(){
-        var valueNombre = document.getElementById("Nombre");
-    var valueApellido = document.getElementById("Apellido");
-    var valueEdad = document.getElementById("edad");
-        var nombre = valueNombre.value
-        var apellido = valueApellido.value
-        var edad = valueEdad.value
-        const url = "http://localhost:8080/api/Empleados";
-        const data = {
-            nombre: nombre,
-            apellido: apellido,
-            edad: parseInt(edad)
-        };
-
-        fetch(url, {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify(data)
-        })
-        .then(response => response.json())
-        .then(data => console.log(data))
-        .catch(error => console.error(error));
-
-    }
-</script>
+<script src="script/script.js"></script>
 </html>
