--- a/Servidor/src/main/resources/static/index.html
+++ b/Servidor/src/main/resources/static/index.html
@@ -18,28 +18,27 @@
     <button onclick="postData()">Publicar</button>
     <div id="contenedor">
         <div><header>Lista de empleados</header></div>
-        <div id="title">
-            <div class="title">Nombre</div>
-            <div class="title">Apellido</div>
-            <div class="title">Edad</div>
-        </div>
         <div id="listas">
             <div class="listas">
-                <ul id="nombres">
-                    <li>Mati</li>
-                </ul>
+              <div class="table-row">
+                <div class="title">Nombre</div>
+                <ul id="nombres"></ul>
+              </div>
             </div>
             <div class="listas">
-                <ul id="apellidos">
-                    <li>Anovazzi</li>
-                </ul>
+              <div class="table-row">
+                <div class="title">Apellido</div>
+                <ul id="apellidos"></ul>
+              </div>
             </div>
             <div class="listas">
-                <ul id="edades">
-                    <li>14</li>
-                </ul>
+              <div class="table-row">
+                <div class="title">Edad</div>
+                <ul id="edades"></ul>
+              </div>
             </div>
-        </div>    
+          </div>
+            
     </div>
 </body>
 <script src="script/script.js"></script>
