--- a/Servidor/src/main/resources/static/index.html
+++ b/Servidor/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
         <label for="Nombre">Nombre:</label><input id="Nombre" type="text">
         <label for="Apellido">Apellido:</label><input id="Apellido" type="text">
         <label for="Nombre">Edad:</label><input id="edad" type="text">
+        <label for="Email"></label><input type="email" id="email">
     </form>
     
     <button onclick="postData()">Publicar</button>
@@ -35,6 +36,12 @@
               <div class="table-row">
                 <div class="title">Edad</div>
                 <ul id="edades"></ul>
+              </div>
+            </div>
+            <div class="listas">
+              <div class="table-row">
+                <div class="title">Email</div>
+                <ul id="email"></ul>
               </div>
             </div>
           </div>
