--- a/Servidor/src/main/resources/static/index.html
+++ b/Servidor/src/main/resources/static/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Pagina de prueba para agregar empleados</h1>
     <form>
-        <label for="Nombre">Nombre:</label><input id="Nombre" type="text">
-        <label for="Apellido">Apellido:</label><input id="Apellido" type="text">
-        <label for="Nombre">Edad:</label><input id="edad" type="text">
-        <label for="Email"></label><input type="email" id="email">
+        <label for="Nombre">Nombre:</label><input id="Nombre" >
+        <label for="Apellido">Apellido:</label><input id="Apellido">
+        <label for="Edad">Edad:</label><input id="edad">
+        <label for="Email">Email:</label><input id="emails">
     </form>
     
     <button onclick="postData()">Publicar</button>
